feat: 修改 package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "config",
     "standard"
   ],
+  "files": [
+    "index.js",
+    "LICENSE",
+    "package.json",
+    "README.md"
+  ],
   "main": "index.js",
   "repository": {
     "type": "git",
